# musubi

./: .gitignore  Cargo.toml  README.md  generate_entity.sh
migration/: Cargo.toml  README.md
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20220902_153334_create_user_table.rs  m20220902_154034_create_peer_table.rs  m20220904_160307_create_ip_table.rs  main.rs
src/: config.rs  error.rs  main.rs
src/api/: mod.rs
src/api/types/: mod.rs
src/api/v1/: interface.rs  keys.rs  mod.rs  types.rs
src/auth/: mod.rs  oidc.rs
src/entity/: ip.rs  mod.rs  peer.rs  prelude.rs  user.rs
src/idp/: oidc.rs
