# SPDX-FileCopyrightText: 2022 perillamint
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "musubi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "0.9", features = ["sqlx-postgres", "runtime-actix-rustls", "macros"] }
tokio = { version = "1", features = ["full"] }
actix-web = "4.0"
openidconnect = { version = "2.3", features = ["reqwest"] }
reqwest = { version = "0.11", features = ["json"] }
jwt = "0.16"
lazy_static = "1.4"
clap = { version = "3.1", features = ["derive"] }
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.17"
regex = "1.5"
thiserror = "1.0"
async-trait = "0.1"
